--- a/wfchat/WildFireChat/Login/MyLoginViewController.xib
+++ b/wfchat/WildFireChat/Login/MyLoginViewController.xib
@@ -56,7 +56,7 @@
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8OC-5X-d6q">
                     <rect key="frame" x="40" y="415" width="334" height="40"/>
-                    <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" red="0.93725490196078431" green="0.25490196078431371" blue="0.24313725490196078" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="Zbb-T5-j5g"/>
                     </constraints>
