--- a/wfchat/WildFireChat/Login/MyLoginViewController.xib
+++ b/wfchat/WildFireChat/Login/MyLoginViewController.xib
@@ -32,7 +32,7 @@
                         <constraint firstAttribute="width" constant="80" id="LB7-wp-sG5"/>
                     </constraints>
                 </imageView>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="请输入您的手机号码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DYu-fp-VtT" customClass="BWTextField">
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="请输入您的用户名" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DYu-fp-VtT" customClass="BWTextField">
                     <rect key="frame" x="40" y="210" width="334" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="0KY-xn-f4C"/>
